--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
                     </div>
                     
                        <ul class="site-nav-link">
-                     <li class="link"><a href="./index.html" class="site-link current">Студия</a></li>
-                     <li class="link"><a href="./portfolio.html" class="site-link">Портфолио</a></li>
+                     <li class="link"><a href="./index.html" class="site-link">Студия</a></li>
+                     <li class="link"><a href="./portfolio.html" class="site-link current">Портфолио</a></li>
                      <li class="link"><a href="#" class="site-link">Контакты</a></li>   
                     </ul>
                 </nav>
