add modal/footer form

--- a/portfolio.html
+++ b/portfolio.html
@@ -267,7 +267,23 @@
 </svg>
 </a></li>
 
+
 </ul>
+</li>
+<li class="footer-li">
+<form class="form">
+<h3 class="footer-sosial-title">Подпишитесь на рассылку</h3>
+<div class="form-list">
+    <input class="form-email" type="email" name="email" id="email" placeholder="E-mail"/>
+<button class="form-button" type="submit">Подписаться
+    <svg width="24" height="24" class="form-icon" aria-label="">
+        <use href="./images/symbol-defs.svg#icon-icon-send-1">
+        </use>
+    </svg>
+</button>
+</div>
+
+</form>
 </li>
             </ul>
         </div>        
