--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         </svg>
                     </div>  
                 
-                    <label class="form-label" class="form-coment" for="coment">Комментарий</label>
+                    <label class="form-label" for="coment">Комментарий</label>
                         <textarea class="form-ta-coment" name="coment" id="coment" cols="30" rows="10" placeholder="Введите текст"></textarea>
                     
                 </div>
