--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    header class="header" >
+    <header class="header" >
         
     <div class="container header__inner">
        
