corrections of remarks

--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
         </div> 
     <address class="footer__address">
         <ul class="address">
-            <li class="address__link"><a  href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer" class="address__contacts">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="address__link"><a href="mailto:info@example.com" class="address__contacts">info@example.com</a></li>
-            <li class="address__link"><a href="tel:+380991111111" class="address__contacts"> +38 099 111 11 11</a></li>
+            <li class="address__li"><a  href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank" rel="noopener nofollow noreferrer" class="address__link">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="address__li"><a href="mailto:info@example.com" class="address__contacts">info@example.com</a></li>
+            <li class="address__li"><a href="tel:+380991111111" class="address__contacts"> +38 099 111 11 11</a></li>
         </ul>
     </address> 
 </div>
