--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,9 @@
            <ul class="portfolio-project__list">
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
-                    <div class="portfolio-card__thumb"><img  src="./images/imgp1.jpg" width="370" height="294"
+                    <div class="portfolio-card__thumb">
+                        <img  srcset="./images/portfolio/imgp1.jpg 1x, ./images/portfolio/imgp1-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp1.jpg" width="370" height="294"
                         alt="страница из сайта Технокряк с сотрудниками ">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -81,7 +83,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp2.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp2.jpg 1x, ./images/portfolio/imgp2-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp2.jpg" width="370" height="294"
                     alt="Игрок из баскетбольной команды New Orlean хочет сделать бросок а игрок баскетбольной команды Golden Star хочет ему помешать ">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -98,7 +101,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp3.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp3.jpg 1x, ./images/portfolio/imgp3-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp3.jpg" width="370" height="294"
                    alt="логотип ресторана Seafood">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -115,7 +119,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp4.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp4.jpg 1x, ./images/portfolio/imgp4-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp4.jpg" width="370" height="294"
                    alt="наушники на белом фоне">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -132,7 +137,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp5.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp5.jpg 1x, ./images/portfolio/imgp5-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp5.jpg" width="370" height="294"
                    alt="На белом фоне две коробки">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -149,7 +155,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp6.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp6.jpg 1x, ./images/portfolio/imgp6-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp6.jpg" width="370" height="294"
                    alt="экран монитора где видна страничка Веб-сайта">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -166,7 +173,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp7.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp7.jpg 1x, ./images/portfolio/imgp7-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp7.jpg" width="370" height="294"
                    alt="раскрытая книга">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -183,7 +191,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp8.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp8.jpg 1x, ./images/portfolio/imgp8-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp8.jpg" width="370" height="294"
                         alt="ярлык LAB на белом фоне ">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
@@ -200,7 +209,8 @@
               <li class="portfolio-project__li">
                 <a class="portfolio-card" href="#">
                     <div class="portfolio-card__thumb">
-                        <img src="./images/imgp9.jpg" width="370" height="294"
+                        <img srcset="./images/portfolio/imgp9.jpg 1x, ./images/portfolio/imgp9-370@2x.jpg 2x"
+                        src="./images/portfolio/imgp9.jpg" width="370" height="294"
                   alt="экран ноутбука с открытым приложением Growing Business">
                         <p class="portfolio-card__text" >Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                         </p>
