--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
            <!-- hero -->
         <section class="section hero">
             <div class="container">
-                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                <h1 class="hero__title">Эффективные решения <br />
+                     для вашего бизнеса</h1>
                 <button  class="hero__button"  type="button" data-modal-open >Заказать услугу</button>
             </div>
             
