--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 ./images/team/imgihor.des@2x.jpg 2x"
  media="(min-width: 1200px)"/>
                 
- <img class="team__photo" src="./images/team/imgihor.tab.jpg" width="270" height="260" alt="фотография Игоря Демьяненко, Product Designer">
+ <img class="team__photo" src="./images/team/imgihor.mob.jpg" width="270" height="260" alt="фотография Игоря Демьяненко, Product Designer">
             </picture>
            
           <div class="team__card">
